# vitals

./: .gitignore  CMakeLists.txt  README.md  build.sh  install.sh  main.cpp  setup.sh
.github/workflows/: build-debian-12.yml  build-debian-13.yml  build-ubuntu-22.04.yml  build-ubuntu-24.04.yml
src/: colors.h  common.h  config.cpp  config.h  draw.cpp  draw.h  format.cpp  format.h  gpu.cpp  gpu.h  panel_cpu.cpp  panel_gpu.cpp  panel_memory.cpp  panel_network.cpp  panel_settings.cpp  panel_storage.cpp  panel_thermal.cpp  panels.h  procfs.cpp  procfs.h  state.h  sysinfo.cpp  sysinfo.h  theme.cpp  theme.h
